# hexfuncs

./: .copier-answers.yml  CHANGELOG.md  LICENSE  README.md  build.gradle.kts  gradle.properties  pyproject.toml  settings.gradle.kts
.github/workflows/: build.yml  release.yml
buildSrc/src/main/kotlin/hexfuncs/: java.gradle.kts  minecraft.gradle.kts  platform.gradle.kts
buildSrc/src/main/kotlin/hexfuncs/utils/: mod-dependencies.gradle.kts
common/: build.gradle.kts
common/src/main/kotlin/mc/sky3n3t/hexfuncs/: Hexfuncs.kt  HexfuncsAbstractions.kt  HexfuncsClient.kt
common/src/main/kotlin/mc/sky3n3t/hexfuncs/casting/actions/spells/: OpCongratulate.kt
common/src/main/kotlin/mc/sky3n3t/hexfuncs/casting/frames/: PureFunctionFrame.kt
common/src/main/kotlin/mc/sky3n3t/hexfuncs/casting/iotas/: FunctionIota.kt
common/src/main/kotlin/mc/sky3n3t/hexfuncs/casting/patterns/: OpCompileFunc.kt  OpExecuteFunc.kt  OpGetVar.kt
common/src/main/kotlin/mc/sky3n3t/hexfuncs/config/: HexfuncsConfig.kt
common/src/main/kotlin/mc/sky3n3t/hexfuncs/networking/: HexfuncsNetworking.kt
common/src/main/kotlin/mc/sky3n3t/hexfuncs/networking/handler/: ClientMessageHandler.kt  ServerMessageHandler.kt
common/src/main/kotlin/mc/sky3n3t/hexfuncs/networking/msg/: HexfuncsMessage.kt  MsgSyncConfigS2C.kt
common/src/main/kotlin/mc/sky3n3t/hexfuncs/registry/: HexfuncsActions.kt  HexfuncsRegistrar.kt
common/src/main/resources/: architectury.common.json  hexfuncs-common.mixins.json
common/src/main/resources/assets/hexcasting/patchouli_books/thehexbook/en_us/entries/patterns/spells/: dummy_spells.json5
common/src/main/resources/assets/hexfuncs/lang/: en_us.flatten.json5
doc/: README.md  hexdoc.toml
doc/resources/assets/hexfuncs/lang/: en_us.flatten.json5
doc/src/hexdoc_hexfuncs/: _hooks.py
fabric/: build.gradle.kts
fabric/src/main/kotlin/mc/sky3n3t/hexfuncs/fabric/: FabricHexfuncs.kt  FabricHexfuncsClient.kt  FabricHexfuncsModMenu.kt  HexfuncsAbstractionsImpl.kt
fabric/src/main/resources/: fabric.mod.json  hexfuncs-fabric.mixins.json
forge/: build.gradle.kts
forge/src/main/java/mc/sky3n3t/hexfuncs/forge/mixin/: ForgeMixinConfigPlugin.java  MixinDatagenMain.java
forge/src/main/kotlin/mc/sky3n3t/hexfuncs/forge/: ForgeHexfuncs.kt  ForgeHexfuncsClient.kt  HexfuncsAbstractionsImpl.kt
forge/src/main/resources/: hexfuncs-forge.mixins.json  pack.mcmeta
